# mini_tweet_clone

./: .env  Cargo.toml  docs.md
migrations/2024-02-01-235615_create_tweets/: up.sql
migrations/2024-02-01-235916_create_likes/: up.sql
src/: main.rs  schema.rs
src/commons/: constants.rs
src/core/: likes_entity.rs  mod.rs  tweets_entity.rs
src/modules/: mod.rs
src/modules/likes/: services.rs
src/modules/tweets/: dto.rs  services.rs
