[package]
name = "tweeter_clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
dotenv = "0.15.0"
diesel = { version = "2.1.4", features = [
    "postgres",
    "r2d2",
    "uuid",
    "chrono",
] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = { version = "0.4.33", features = ["serde"] }
serde = "1.0.196"
serde_json = "1.0.113"
serde_derive = "1.0.196"